# quantum-shield-core

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DOSSIER_VENTE.md  Dockerfile  Dockerfile.hardened  FINAL_DELIVERABLE.md  FINAL_DUE_DILIGENCE.md  FINAL_EXECUTIVE_REPORT.md  FINAL_READINESS_REPORT.md  FINAL_REPORT.md  LICENSE  Makefile  PHASE1_AUDIT_FINDINGS.md  README.md  RELEASE_NOTES.md  SECURITY.md  TECHNICAL_DUE_DILIGENCE.md  audit_store.py  auth.py  constants.py  dashboard.html  database.py  docker-compose.yml  example_integration.py  main.py  models.py  pytest.ini  requirements-dev.txt  requirements.txt  ruff.toml  security_engine.py
alembic/: env.py
benchmarks/: BENCHMARK_REPORT.md  BENCHMARK_RESULTS.md  run_benchmarks.py
demo/: 2-minute-demo.md  README.md  curl-examples.md  demo.sh  quickstart-clean.sh  quickstart.sh  swagger-walkthrough.md
docs/: API_GUIDE.md  ARCHITECTURE.md  AZURE_KEY_VAULT_GUIDE.md  AZURE_KEY_VAULT_REAL_VALIDATION_FIX.md  AZURE_KMS_AUDIT.md  AZURE_KMS_IMPLEMENTATION_SUMMARY.md  CODE_REVIEW_FINDINGS.md  CONTAINER_HARDENING.md  CURRENT_STATE_REPORT.md  DEMO_USE_CASE.md  DOCKER_GUIDE.md  ENTERPRISE_AUDIT.md  ENTERPRISE_QUICK_WINS_SUMMARY.md  ENV_GUIDE.md  EXECUTIVE_SUMMARY.md  FINAL_VERIFIED_ASSESSMENT.md  FIPS_READINESS.md  FULL_COMMERCIAL_ASSESSMENT.md  FULL_PROJECT_VALUATION.md  FULL_SECURITY_AUDIT.md  FULL_TECHNICAL_DUE_DILIGENCE.md  GO_SDK_AUDIT.md  GO_SDK_GUIDE.md  (+24 more)
rust-engine/: Cargo.toml  Makefile  pyproject.toml
rust-engine/src/: error.rs  lib.rs  python.rs  tests.rs
(+137 files in other folders)
